--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,22 +63,22 @@ services:
     volumes:
       - ./frontend/dist:/usr/share/nginx/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      # - ./docker_data/certbot:/var/www/certbot
-      # - ./docker_data/letsencrypt:/etc/letsencrypt
-      # - /etc/letsencrypt:/etc/letsencrypt
-      # - /var/www/certbot:/var/www/certbot
+      - ./docker_data/certbot:/var/www/certbot
+      - ./docker_data/letsencrypt:/etc/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/www/certbot:/var/www/certbot
     depends_on:
       - api
       - web
     networks:
       - astro
   
-  # certbot:
-  #   image: certbot/certbot
-  #   container_name: certbot
-  #   volumes:
-  #     - ./docker_data/letsencrypt:/etc/letsencrypt
-  #     - ./docker_data/certbot:/var/www/certbot
-  #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 1 & wait $!; done;'"
-  #   networks:
-  #     - astro
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./docker_data/letsencrypt:/etc/letsencrypt
+      - ./docker_data/certbot:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 1 & wait $!; done;'"
+    networks:
+      - astro
