--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name crm.astrovert.ru www.crm.astrovert.ru;
+    server_name crm.astrovert.ru;
     client_max_body_size 100M;
     
     location / {
@@ -8,46 +8,46 @@ server {
     }
 
     location /.well-known/acme-challenge/ {
-    root /var/www/certbot;
+      alias /var/www/certbot/;
   }
 }
 
-# server {
-#   listen 443 ssl;
-#   server_name crm.astrovert.ru www.crm.astrovert.ru;
-#   client_max_body_size 100M;
+server {
+  listen 443 ssl;
+  server_name crm.astrovert.ru;
+  client_max_body_size 100M;
 
-#   ssl_certificate /etc/letsencrypt/live/crm.astrovert.ru/fullchain.pem;
-#   ssl_certificate_key /etc/letsencrypt/live/crm.astrovert.ru/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/crm.astrovert.ru/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/crm.astrovert.ru/privkey.pem;
 
-#   location / {
-#     root   /usr/share/nginx/html;
-#     index  index.html index.htm;
-#     try_files $uri $uri/ /index.html;
-#   }
+  location / {
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri $uri/ /index.html;
+  }
 
-#   location ~ /\.env {
-#     deny all;
-#   }
+  location ~ /\.env {
+    deny all;
+  }
 
-#   location /api {
-#     proxy_pass http://api:8000;
-#     proxy_set_header Host $host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#     proxy_set_header X-Forwarded-Proto $scheme;
-#   }
+  location /api {
+    proxy_pass http://api:8000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 
-#   location /static/ {
-#     root app;
-#   }
-#   error_page   500 502 503 504  /50x.html;
+  location /static/ {
+    root app;
+  }
+  error_page   500 502 503 504  /50x.html;
   
-#   location = /50x.html {
-#     root   /usr/share/nginx/html;
-#   }
+  location = /50x.html {
+    root   /usr/share/nginx/html;
+  }
   
-#   location /.well-known/acme-challenge/ {
-#     root /var/www/certbot;
-#   }
-# }
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+}
